fixed required not showing

--- a/style/board_overlay_style.css
+++ b/style/board_overlay_style.css
@@ -308,7 +308,6 @@
 }
 
 .overlay_content .action-button-section .required-text{
-    visibility: hidden;
     font-size: 16px;
 }
 .overlay_content .action-button-section .button-section .clear-button{
